--- a/frontend/src/components/UserProfileDisplay/UserProfileDisplay.module.css
+++ b/frontend/src/components/UserProfileDisplay/UserProfileDisplay.module.css
@@ -10,12 +10,34 @@
   z-index: 5;
 }
 
+.nameAndEdit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-bottom: 20px; */
+  flex-wrap: wrap;
+}
+
 .profileName {
   color: var(--color-primary);
-  margin-top: 50px;
+  margin-right: 15px;
   font-size: 2.2em;
   font-weight: 600;
-  text-align: center;
+}
+
+.editButton {
+  background-color: var(--color-primary);
+  color: var(--color-text-light);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 100px;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.3s ease;
+}
+
+.editButton:hover {
+  background-color: #145680;
 }
 
 .error {
@@ -53,5 +75,15 @@
 @media (max-width: 768px) {
     .container {
         margin: 0 auto 20px auto;
+    }
+    .editButton {
+      margin-top: -30px;
+    }
+
+    .profileName {
+      margin-top: 10px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 }
